# pyzoltan

./: .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  build_zoltan.sh  environment.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/workflows/: tests.yml
docs/: Makefile
docs/source/: conf.py  index.rst  overview.rst  start.rst
docs/source/reference/: index.rst  zoltan.rst
pyzoltan/: __init__.py  api.py
pyzoltan/core/: zoltan.pxd  zoltan.pyx  zoltan_comm.pxd  zoltan_comm.pyx  zoltan_dd.pxd  zoltan_dd.pyx
pyzoltan/core/tests/: 3d_partition.py  geometric_partitioner.py  test_zoltan.py
pyzoltan/czoltan/: czoltan.pxd  czoltan_comm.pxd  czoltan_config.pxd  czoltan_dd.pxd  czoltan_types.pxd  mpi-compat.h
pyzoltan/tools/: run_parallel_script.py
