[build-system]
requires = [
    "setuptools >= 61.0", 
    "cython>3.0", 
    "cyarray",
    "mpi4py>=1.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyzoltan"
dynamic = ["version"]
readme = "README.rst"
license = {file = "LICENSE.txt"}
dependencies = ["numpy", "mpi4py>=1.2"]
description = "Wrapper for the Zoltan data management library"
authors = [
  {name = "PySPH Developers", email = "pysph-dev@googlegroups.com"}
]
keywords = ["Cython", "Zoltan", "Dynamic load balancing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries"
]

[project.optional-dependencies]
docs = ["sphinx"]
tests = ["pytest>=3.0"]
dev = ["sphinx", "pytest>=3.0", "cython>3.0", "cyarray"]

[project.urls]
Documentation = "https://pyzoltan.readthedocs.io"
Repository = "https://github.com/pypr/pyzoltan.git"
Issues = "https://github.com/pypr/pyzoltan/issues"
